[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/TitleScreen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Background.png" type="Texture" id=2]
[ext_resource path="res://Scenes/TitleScreen/title.png" type="Texture" id=3]
[ext_resource path="res://Scenes/TitleScreen/START-H.png" type="Texture" id=4]
[ext_resource path="res://Scenes/TitleScreen/EXIT-H.png" type="Texture" id=5]
[ext_resource path="res://Scenes/TitleScreen/CONTROLS.png" type="Texture" id=6]
[ext_resource path="res://Scenes/TitleScreen/CONTROLS-F.png" type="Texture" id=7]
[ext_resource path="res://Scenes/TitleScreen/CREDITS-F.png" type="Texture" id=8]
[ext_resource path="res://Scenes/TitleScreen/EXIT.png" type="Texture" id=9]
[ext_resource path="res://Scenes/TitleScreen/CREDITs.png" type="Texture" id=10]
[ext_resource path="res://Scenes/TitleScreen/START.png" type="Texture" id=11]
[ext_resource path="res://Scenes/TitleScreen/bar.png" type="Texture" id=12]
[ext_resource path="res://Assets/music/theme.wav" type="AudioStream" id=13]

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Title" type="TextureRect" parent="."]
margin_left = 85.9842
margin_top = 175.999
margin_right = 733.984
margin_bottom = 488.999
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 771.171, 343.649 )
scale = Vector2( 1, 0.956932 )
texture = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 794.455
margin_top = 215.575
margin_right = 1173.46
margin_bottom = 461.575
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBtn" type="TextureButton" parent="VBoxContainer"]
margin_right = 384.0
margin_bottom = 61.0
texture_normal = ExtResource( 11 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 384.0
margin_bottom = 126.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 384.0
margin_bottom = 191.0
texture_normal = ExtResource( 10 )
texture_focused = ExtResource( 8 )

[node name="ExitBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 195.0
margin_right = 384.0
margin_bottom = 256.0
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -6.0
autoplay = true
[connection signal="pressed" from="VBoxContainer/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlBtn" to="." method="_on_ControlBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditBtn" to="." method="_on_CreditBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
